--- a/about/index.html
+++ b/about/index.html
@@ -140,8 +140,7 @@
   </div>
   <!--progressBarScroll-->
   <!-- header -->
-  
-  <nav class="header"  id="header">
+  <nav class="header" id="header">
     <div class="backgroundColorNav">
 
 
@@ -182,37 +181,28 @@
       <div class="column">
         <strong>
           <div class="intro">
-            <span class="t-hi"> Product &nbsp;</span>
+            <h1> Product &nbsp;</h1>
             <span class="divider1"></span>
-            <span class="t-hi"> Design &nbsp;</span>
+            <h1> Design &nbsp;</h1>
             <span class="divider1"></span>
-            <span class="t-hi"> Architecture </span>
+            <h1> Architecture </h1>
             <span class="divider1"></span>
-            <span class="t-hi"> Art </span>
+            <h1> Art </h1>
           </div>
         </strong>
         <div class="blankHXS"></div>
 
-        <div class="column">
-          <span class="t-me">Broad skill set developed in a startup environment</span>
-          <span class="t-me">with deep engagement in all stages of the design process</span>
-
-        </div>
-
       </div>
     </div>
-    <div class="t-intro zTop" data-aos="fade-up">
-      <p>
-        a UI&#47;UX designer with an <a
-          href="/architecture/" class="textUnderline">architectural design </a>background.
-        Passionate
-        about translating complex business requirements into compelling user experiences.
-      </p>
-      <p> I built and update this website myself from scratch using HTML/CSS/JS deployed on AWS S3.
-        Please visit my <a href="https://github.com/vicky-wyq" class="textUnderline"
-          target="_blank">GitHub</a>
-        repository for more details.
-      </p>
+    <div class="Grid Grid--full">
+      <div class="Grid-cel colorGrey">
+        <h3 >I’m a UI/UX designer with a background in  <a
+          href="/architecture/" class="textUnderline colorGrey">architecture</a></h3>
+        <h3>broad skill set developed in a startup environment</h3>
+        <h3>with deep engagement in all stages of the design process</h3>
+        <h3>designed and  <a href="https://github.com/vicky-wyq" class="textUnderline colorGrey"
+          target="_blank">implemented</a> this site from scratch, deployed it on AWS S3.</h3>          
+      </div>
     </div>
 
   </div>
