--- a/index.html
+++ b/index.html
@@ -145,39 +145,38 @@
 
   <!--intro-->
   <div class="wrapper element">
-    <div class="intro">
-      <div class="t-hello">Hello, I'm Vicky. </div>
-    </div>
+ 
     <div class="blankHXS"></div>
+    <div class="t-hello">Hello, I'm Vicky. </div>
+
     <div class="intro" data-aos="fade-up">
       <div class="column">
-        <strong>
-          <div class="intro">
-            <span class="t-hi"> UI/UX designer &nbsp;</span>
-            <span class="divider1"></span>
 
-            <span class="t-hi"> Product designer </span>
-          </div>
-        </strong>
         <div class="blankHXS"></div>
-
-        <div class="rowChng">
-          <span class="t-me"> I am currently based out of &nbsp;</span>
-          <span class="t-me"> San Francisco </span>
+        <div class="Grid Grid--gutters">
+          <div class="Grid-cell">
+            <strong>
+              <div class="intro">
+                <h1> UI/UX designer &nbsp;</h1>
+                <span class="divider1"></span>
+    
+                <h1> Product designer </h1>
+              </div>
+            </strong>
+          </div>
         </div>
 
-        <div class="column">
-          <span class="t-me"> Design for business and consumer-facing websites with a small
-            team.</span>
-
-        </div>
-
+      </div>
+    </div>
+    <div class="Grid Grid--full">
+      <div class="Grid-cell">
+        <h3>I am currently based out of San Francisco</h3>
+        <h3>design for business and consumer-facing websites with a small team</h3>
       </div>
     </div>
     <div class="blankHXS"></div>
 
     <div class="Grid Grid--gutters Grid--cols-3">
-      <div class="Grid-cell">
         <a href="https://www.linkedin.com/in/vicky-wyq/" target="_blank">
           <img class="intro-logo" src="./icon/in.svg" alt="linkedin">
         </a>
@@ -188,18 +187,15 @@
         <a href="https://www.instagram.com/vw_yiqi/" target="_blank">
           <img class="intro-logo" src="./icon/ins.svg" alt="medium">
         </a>
-      </div>
     </div>
     <div class="blankHXS"></div>
     <div class="Grid Grid--gutters Grid--cols-3">
-      <div class="Grid-cell">
         <a href="/resume.pdf" target="_blank"> <button class="buttonLanding arrButtonResume">Resume
             &nbsp;
           </button></a>
 
         <a href="/about"> <button class="buttonLanding arrButton">About me &nbsp;
           </button></a>
-      </div>
     </div>
   </div>
   <!--intro-->
