--- a/photography/index.html
+++ b/photography/index.html
@@ -152,20 +152,19 @@
     <div class="intro" data-aos="fade-up">
       <strong>
         <div class="intro">
-          <span class="t-hi"> Photography &nbsp;</span>
+          <h1> Photography &nbsp;</h1>
           <span class="divider1"></span>
-          <span class="t-hi"> Selected photographs </span>
+          <h1> Selected photographs </h1>
         </div>
       </strong>
- 
+    </div>
+    <div class="Grid Grid--full">
+      <div class="Grid-cell colorGrey">
+        <h3>observing the narrative of natural components within a certain perspective</h3>
+        <h3>love to recompose the nature with my camera</h3>
+      </div>
     </div>
 
-    <div class="t-intro zTop" data-aos="fade-up">
-      <p>
-        Always got inspiration from nature. I love to recompose the nature form with my camera in 2
-        dimensions. Observing the narrative of natural components within a certain perspective.
-      </p>
-    </div>
 
   </div>
   <!--intro-->
