--- a/architecture/index.html
+++ b/architecture/index.html
@@ -149,24 +149,23 @@
     <div class="intro" data-aos="fade-up">
       <strong>
         <div class="intro">
-          <span class="t-hi"> Architecture &nbsp;</span>
+          <h1> Architecture &nbsp;</h1>
         
           <span class="divider1"></span>
-          <span class="t-hi"> Selected academic projects </span>
+          <h1> Selected academic projects </h1>
         </div>
       </strong>
  
     </div>
 
-    <div class="t-intro zTop" data-aos="fade-up">
-      <p>
-        Most of the projects are from my three-year Master of Architecture program. The main focuses
-        were Design Theories, Methods, and Practices. Projects emphasize the major format, spatial,
-        material, tectonic, social, technological, and environmental determinants of building form.
-        the penultimate studio incorporate integrative thinking that shapes complex architectural
-        design and technical solutions based on design research and studio requirements.
-      </p>
+    <div class="Grid Grid--full">
+      <div class="Grid-cell colorGrey">
+        <h3>projects are from my three-year M.Arch program</h3>
+        <h3>the main focuses were design theories, methods, and practices</h3>
+        <h3>projects emphasize the major format, spatial, material, tectonic, social, technological, and environmental determinants of building form</h3>
+      </div>
     </div>
+ 
 
   </div>
   <!--intro-->
