hamburger menu & header

--- a/index.html
+++ b/index.html
@@ -70,10 +70,12 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
     rel="stylesheet">
   <!--font awesome -->
- 
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;500;600;700;800;900&display=swap"
+    rel="stylesheet">
   <!--font font-family: Maven Pro; -->
 
 
@@ -88,11 +90,11 @@
   <script type="text/javascript" src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <!--aos-->
- 
+
 
 
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-E8YXDWJST2"></script>
-      <!-- google analytics-->
+  <!-- google analytics-->
 
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -135,17 +137,18 @@
         <span class="bar"></span>
         <span class="bar"></span>
         <span class="bar"></span>
-      </div></div>
+      </div>
+    </div>
   </nav>
   <!-- header -->
-    
+
   <div class="blankHM"></div>
 
 
 
   <!--intro-->
   <div class="wrapper element">
- 
+
     <div class="blankHXS"></div>
     <div class="t-hello">Hello, I'm Vicky. </div>
 
@@ -159,7 +162,7 @@
               <div class="intro">
                 <h1> UI/UX designer &nbsp;</h1>
                 <span class="divider1"></span>
-    
+
                 <h1> Product designer </h1>
               </div>
             </strong>
@@ -177,25 +180,25 @@
     <div class="blankHXS"></div>
 
     <div class="Grid Grid--gutters Grid--cols-3">
-        <a href="https://www.linkedin.com/in/vicky-wyq/" target="_blank">
-          <img class="intro-logo" src="./icon/in.svg" alt="linkedin">
-        </a>
-        <a href="https://github.com/vicky-wyq" target="_blank">
-          <img class="intro-logo" src="./icon/git.svg" alt="github">
-        </a>
+      <a href="https://www.linkedin.com/in/vicky-wyq/" target="_blank">
+        <img class="intro-logo" src="./icon/in.svg" alt="linkedin">
+      </a>
+      <a href="https://github.com/vicky-wyq" target="_blank">
+        <img class="intro-logo" src="./icon/git.svg" alt="github">
+      </a>
 
-        <a href="https://www.instagram.com/vw_yiqi/" target="_blank">
-          <img class="intro-logo" src="./icon/ins.svg" alt="medium">
-        </a>
+      <a href="https://www.instagram.com/vw_yiqi/" target="_blank">
+        <img class="intro-logo" src="./icon/ins.svg" alt="medium">
+      </a>
     </div>
     <div class="blankHXS"></div>
     <div class="Grid Grid--gutters Grid--cols-3">
-        <a href="/resume.pdf" target="_blank"> <button class="buttonLanding arrButtonResume">Resume
-            &nbsp;
-          </button></a>
+      <a href="/resume.pdf" target="_blank"> <button class="buttonLanding arrButtonResume">Resume
+          &nbsp;
+        </button></a>
 
-        <a href="/about"> <button class="buttonLanding arrButton">About me &nbsp;
-          </button></a>
+      <a href="/about"> <button class="buttonLanding arrButton">About me &nbsp;
+        </button></a>
     </div>
   </div>
   <!--intro-->
