button and color

--- a/appointa/index.html
+++ b/appointa/index.html
@@ -166,7 +166,7 @@
 
       <div class="ProjectBannerInner">
         <a href="https://www.figma.com/proto/0APvIwRfsXK7XTGaBXhD05/APPOINTA?page-id=1713%3A9427&node-id=1714%3A9456&viewport=720%2C570%2C0.52&scaling=scale-down&starting-point-node-id=1714%3A9456"
-          target="_blank"> <button class="button-35">Slide Decks</button></a>
+          target="_blank"> <button class="button-35 APPOINTA">Slide Decks</button></a>
       </div>
     </div>
 
@@ -175,9 +175,8 @@
       <img class="displayTablet" src="MockupS.png" alt="APPOINTA">
       <div class="ProjectBannerInner">
         <a href="https://www.figma.com/proto/0APvIwRfsXK7XTGaBXhD05/APPOINTA?page-id=1713%3A9427&node-id=1714%3A9456&viewport=720%2C570%2C0.52&scaling=scale-down&starting-point-node-id=1714%3A9456"
-          target="_blank"> <button class="button-35">Slide Decks</button></a>
-          <div class="blankHXS"></div>
-
+          target="_blank"> <button class="button-35 APPOINTA">Slide Decks</button></a>
+        <div class="blankHXS"></div>
       </div>
     </div>
     <div class="ProjectBanner displayPhone">
@@ -185,8 +184,8 @@
       <img class="displayPhone" src="MockupXS.png" alt="APPOINTA">
       <div class="ProjectBannerInner">
         <a href="https://www.figma.com/proto/0APvIwRfsXK7XTGaBXhD05/APPOINTA?page-id=1713%3A9427&node-id=1714%3A9456&viewport=720%2C570%2C0.52&scaling=scale-down&starting-point-node-id=1714%3A9456"
-          target="_blank"> <button class="button-35">Slide Decks</button></a>
-          <div class="blankHXS"></div>
+          target="_blank"> <button class="button-35 APPOINTA">Slide Decks</button></a>
+        <div class="blankHXS"></div>
 
       </div>
     </div>
