--- a/seer/index.html
+++ b/seer/index.html
@@ -148,17 +148,35 @@
   <div class="BGseer2_1">
     <div class="blankPhone"></div>
     <div class="blankHS"></div>
-    <div class="ProjectBanner">
+    <div class="ProjectBanner displayLaptop">
       <div class="blankMin1880"></div>
-      <img class="displayNoneDesktop" src="MockupS.png" alt="SEER">
-      <img class="displayNonePhone" src="Mockup.png" alt="SEER">
+      <img class="" src="Mockup.png" alt="SEER">
 
       <div class="ProjectBannerInner">
-        <a href="https://www.figma.com/proto/X6ERoTDqPOY9rzJFA7IsKL/SEER?page-id=402%3A4188&node-id=402%3A4228&viewport=1099%2C670%2C0.19&scaling=scale-down&starting-point-node-id=402%3A4228"
-        target="_blank"> <button class="button-35-1">Slide Decks</button></a>
+        <a href="https://www.figma.com/proto/0APvIwRfsXK7XTGaBXhD05/APPOINTA?page-id=1713%3A9427&node-id=1714%3A9456&viewport=720%2C570%2C0.52&scaling=scale-down&starting-point-node-id=1714%3A9456"
+          target="_blank"> <button class="button-35 SEER">Slide Decks</button></a>
       </div>
+    </div>
 
+    <div class="ProjectBanner displayTablet">
+      <div class="blankMin1880"></div>
+      <img class="displayTablet" src="MockupS.png" alt="SEER">
+      <div class="ProjectBannerInner">
+        <a href="https://www.figma.com/proto/0APvIwRfsXK7XTGaBXhD05/APPOINTA?page-id=1713%3A9427&node-id=1714%3A9456&viewport=720%2C570%2C0.52&scaling=scale-down&starting-point-node-id=1714%3A9456"
+          target="_blank"> <button class="button-35 SEER">Slide Decks</button></a>
+          <div class="blankHXS"></div>
 
+      </div>
+    </div>
+    <div class="ProjectBanner displayPhone">
+      <div class="blankMin1880"></div>
+      <img class="displayPhone" src="MockupXS.png" alt="SEER">
+      <div class="ProjectBannerInner">
+        <a href="https://www.figma.com/proto/0APvIwRfsXK7XTGaBXhD05/APPOINTA?page-id=1713%3A9427&node-id=1714%3A9456&viewport=720%2C570%2C0.52&scaling=scale-down&starting-point-node-id=1714%3A9456"
+          target="_blank"> <button class="button-35 SEER">Slide Decks</button></a>
+          <div class="blankHXS"></div>
+
+      </div>
     </div>
   </div>
   <div class="blankHXS"></div>
