--- a/about/index.html
+++ b/about/index.html
@@ -231,7 +231,8 @@
         <div class="progressStepContainer ">
           <ul class="progress">
             <li class="progress__item ">
-              <h3>Art</h3>
+              <h5> <strong class="colorGrey">Art </strong> </h5>
+
               <ul>
                 <li> developed the nature of artistic experience, allows me to express our emotions
                   and feelings in a creative way.</li>
@@ -247,7 +248,8 @@
             <div class="blankHXS"></div>
 
             <li class="progress__item">
-              <h3>Design</h3>
+              <h5> <strong class="colorGrey">Design </strong> </h5>
+
               <ul>
                 <li>having a strong creative vision</li>
                 <li>creativity, innovation, attention to detail, and the ability to think outside
@@ -257,7 +259,8 @@
             <div class="blankHXS"></div>
 
             <li class="progress__item">
-              <h3>Architecture</h3>
+              <h5> <strong class="colorGrey">Architecture </strong> </h5>
+
               <ul>
 
                 <li>design buildings that are both functional and aesthetically pleasing</li>
@@ -271,7 +274,7 @@
 
             <li class="progress__item progress__item--active">
               <strong>
-                <h3>User experience design </h3>
+                <h5> <strong>User experience design </strong> </h5>
 
                 <ul>
                   <li>understanding the user, understand what they want and how they want to use the
