--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
   </div>
   <!-- Arrow -->
   <div class="blankHS"></div>
-  <!-- projects ongoing -->
+  <!-- projects -->
   <div class="wrapper">
     <div class="Grid Grid--gutters Grid--cols-2">
       <div class="Grid-cell">
@@ -265,8 +265,49 @@
       </div>
     </div>
   </div>
+  <div class="wrapper">
+    <div class="Grid Grid--gutters Grid--cols-2">
+      <div class="Grid-cell">
+        <a href="/GardenersHub/">
+          <div class="element">
 
-  <!-- projects ongoing -->
+            <div class="elementCard float cardBorder GardenersHub">
+              <img src="./image/Cover_GardenersHub.svg" alt="Gardeners Hub">
+              <div class="element">
+                <div class="element">
+                  <h5>For plant lovers</h5>
+                  <h3 class="arrCard colorBlack">Gardeners hub</h3>
+                  <h5>Find solutions and ideas to help gardeners to
+                    improve their horticultural experience with neighbors and reduce wasting resources
+                    by selling or sharing locally.</h5>
+                </div>
+              </div>
+            </div>
+          </div>
+        </a>
+      </div>
+      <div class="Grid-cell">
+        <a href="/toasttab/">
+          <div class="element">
+
+            <div class="elementCard float cardBorder toasttab">
+              <img src="./image/Cover_toasttab.svg" alt="ANARE">
+              <div class="element">
+                <div class="element">
+                  <h5>For customer order</h5>
+                  <h3 class="arrCard colorBlack">Toast tab order experience</h3>
+                  <!--Analysis Report-->
+                  <h5>xxx</h5>
+                </div>
+              </div>
+            </div>
+          </div>
+        </a>
+
+      </div>
+    </div>
+  </div>
+  <!-- projects -->
   <div class="blankHM"></div>
   <hr>
   <div class="blankHM"></div>
