--- a/about/index.html
+++ b/about/index.html
@@ -196,22 +196,114 @@
     </div>
     <div class="Grid Grid--full">
       <div class="Grid-cel colorGrey">
-        <h3 >I’m a UI/UX designer with a background in  <a
-          href="/architecture/" class="textUnderline colorGrey">architecture</a></h3>
+        <h3>I’m a UI/UX designer with a background in <a href="/architecture/"
+            class="textUnderline colorGrey">architecture</a></h3>
         <h3>broad skill set developed in a startup environment</h3>
         <h3>with deep engagement in all stages of the design process</h3>
-        <h3>designed and  <a href="https://github.com/vicky-wyq" class="textUnderline colorGrey"
-          target="_blank">implemented</a> this site from scratch, deployed it on AWS S3.</h3>          
+        <h3>designed and <a href="https://github.com/vicky-wyq" class="textUnderline colorGrey"
+            target="_blank">implemented</a> this site from scratch, deployed it on AWS S3.</h3>
       </div>
     </div>
-
   </div>
   <!--intro-->
 
   <div class="blankHM"></div>
   <hr>
   <div class="blankHM"></div>
+  <div class="wrapper">
+    <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
+      <div class="Grid-cell">
+        <div class="element">
+          <div class="Grid">
+            <p class="tArrow"> Method &#38; Importance </p>
+            <img class="se-arrow" src="./../icon/arrow-se.svg" alt="se-arrow">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="blankHS"></div>
 
+  <div class="wrapper">
+    <div class="Grid Grid--gutters Grid--cols-2">
+      <div class="Grid-cell">
+        <div class="element">
+          <div class="elementInner cardBorder heightM">
+            <img class="IconS" src="IconSearch.svg" alt="se-arrow">
+            <div class="blankHXS"></div>
+            <h4> <strong> Understand &#38; Test</strong> </h4>
+
+            <ul>
+              <li> The user needs is the foremost priority.</li>
+              <li> Assess the users' requirements and prevent prejudice.</li>
+              <li> Physical sequence is property transferred on digital screens.</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <div class="Grid-cell">
+        <div class="element">
+          <div class="elementInner cardBorder heightM">
+            <img class="IconS" src="IconCategory.svg" alt="se-arrow">
+
+            <div class="blankHXS"></div>
+            <h4> <strong> Structure &#38; Prioritize</strong> </h4>
+            <ul>
+              <li>Structure the flow to support the core functions</li>
+
+              <li>Consider the overall information hierarchy and dependency </li>
+
+              <li>Minimize dependence and interdependence between elements whenever possible</li>
+     
+            </ul>
+          </div>
+        </div>
+      </div>
+
+    </div>
+    <div class="Grid Grid--gutters Grid--cols-2">
+      <div class="Grid-cell">
+        <div class="element">
+          <div class="elementInner cardBorder heightM">
+            <img class="IconS" src="IconDocument.svg" alt="se-arrow">
+
+            <div class="blankHXS"></div>
+
+            <h4> <strong> Learn &#38; Improve</strong> </h4>
+
+            <ul>
+              <li>never stops learning, observing, or experimenting</li>
+              <li>Coordinate with multiple people</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <div class="Grid-cell">
+        <div class="element">
+          <div class="elementInner cardBorder heightM">
+            <img class="IconS" src="IconCategory.svg" alt="se-arrow">
+
+            <div class="blankHXS"></div>
+            <h4> <strong> Structure &#38; Prioritize</strong> </h4>
+            <ul>
+              <li>Structure the flow to support the core functions</li>
+
+              <li>Consider the overall information hierarchy and dependency </li>
+
+              <li>Minimize dependence and interdependence between elements whenever possible</li>
+     
+            </ul>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+  <div class="blankHM"></div>
+  <hr>
+  <div class="blankHM"></div>
   <!-- My Journey -->
   <div class="wrapper">
     <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
@@ -294,13 +386,7 @@
     </div>
 
   </div>
-
-
-
-
   <!-- My Journey -->
-
-
   <div class="blankHM"></div>
   <hr>
   <div class="blankHM"></div>
