--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
       <div class="Grid-cell">
         <div class="element">
           <div class="Grid">
-            <p class="tArrow"> Most Recent Projects</p>
+            <p class="tArrow"> Web App</p>
             <img class="se-arrow" src="./icon/arrow-se.svg" alt="se-arrow">
           </div>
         </div>
@@ -229,11 +229,9 @@
               <img src="./image/Cover_APPOINTA.jpg" alt="Appointa">
               <div class="element">
                 <div class="element">
-                  <h5>For scheduling interview</h5>
+                  <h5>For job interview scheduling</h5>
                   <h3 class="arrCard colorBlack">APPOINTA</h3>
-                  <h5>Appointa is designed for recruiters, managers, and candidates to schedule,
-                    reschedule, or cancel appointments. All in one App, sync calendars, easy to
-                    share availability between team members and candidates.</h5>
+                  <h4>Streamline the job interview scheduling process to make it more efficient, convenient, and intuitive</h4>
                 </div>
               </div>
             </div>
@@ -251,11 +249,7 @@
                   <h5>For grow business</h5>
                   <h3 class="arrCard colorBlack">SEER</h3>
                   <!--Analysis Report-->
-                  <h5>SEER is designed for analysis of business sentiment scores based on the input
-                    keywords. It connects to different social network platforms with API. Covert
-                    keywords to feed. NLP processes the feeds with the keywords, and generates data
-                    on
-                    the dashboard for users</h5>
+                  <h4>Help the brand managers understand their potential users and promote their brand on Reddit</h4>
                 </div>
               </div>
             </div>
@@ -265,6 +259,22 @@
       </div>
     </div>
   </div>
+  <div class="blankHS"></div>
+  <!-- Arrow -->
+  <div class="wrapper">
+    <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
+      <div class="Grid-cell">
+        <div class="element">
+          <div class="Grid">
+            <p class="tArrow"> Mobile App</p>
+            <img class="se-arrow" src="./icon/arrow-se.svg" alt="se-arrow">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- Arrow -->
+  <div class="blankHS"></div>
   <div class="wrapper">
     <div class="Grid Grid--gutters Grid--cols-2">
       <div class="Grid-cell">
