--- a/about/index.html
+++ b/about/index.html
@@ -228,15 +228,15 @@
     <div class="Grid Grid--gutters Grid--cols-2">
       <div class="Grid-cell">
         <div class="element">
-          <div class="elementInner cardBorder heightM">
+          <div class="elementInner cardBorder ">
             <img class="IconS" src="IconSearch.svg" alt="se-arrow">
             <div class="blankHXS"></div>
-            <h4> <strong> Understand &#38; Test</strong> </h4>
+            <h4> <strong> Understanding &#38; Testing</strong> </h4>
 
             <ul>
               <li> The user needs is the foremost priority.</li>
               <li> Assess the users' requirements and prevent prejudice.</li>
-              <li> Physical sequence is property transferred on digital screens.</li>
+              <li> Ensure the physical sequence is property transferred on digital screens.</li>
             </ul>
           </div>
         </div>
@@ -244,11 +244,11 @@
 
       <div class="Grid-cell">
         <div class="element">
-          <div class="elementInner cardBorder heightM">
+          <div class="elementInner cardBorder ">
             <img class="IconS" src="IconCategory.svg" alt="se-arrow">
 
             <div class="blankHXS"></div>
-            <h4> <strong> Structure &#38; Prioritize</strong> </h4>
+            <h4> <strong> Structure &#38; Prioritization</strong> </h4>
             <ul>
               <li>Structure the flow to support the core functions</li>
 
@@ -265,35 +265,33 @@
     <div class="Grid Grid--gutters Grid--cols-2">
       <div class="Grid-cell">
         <div class="element">
-          <div class="elementInner cardBorder heightM">
+          <div class="elementInner cardBorder ">
             <img class="IconS" src="IconDocument.svg" alt="se-arrow">
 
             <div class="blankHXS"></div>
 
-            <h4> <strong> Learn &#38; Improve</strong> </h4>
+            <h4> <strong> Consistency &#38; Minimalism</strong> </h4>
 
             <ul>
-              <li>never stops learning, observing, or experimenting</li>
-              <li>Coordinate with multiple people</li>
+              <li>Update and maintain the design system, eliminate redundancy.</li>
+              <li>Ensure that all elements of the user interface are consistent in terms of styling, placement, and function. </li>
             </ul>
           </div>
         </div>
       </div>
-
       <div class="Grid-cell">
         <div class="element">
-          <div class="elementInner cardBorder heightM">
-            <img class="IconS" src="IconCategory.svg" alt="se-arrow">
+          <div class="elementInner cardBorder ">
+            <img class="IconS" src="IconDocument.svg" alt="se-arrow">
 
             <div class="blankHXS"></div>
-            <h4> <strong> Structure &#38; Prioritize</strong> </h4>
+
+            <h4> <strong> Learning &#38; Improving</strong> </h4>
+
             <ul>
-              <li>Structure the flow to support the core functions</li>
-
-              <li>Consider the overall information hierarchy and dependency </li>
-
-              <li>Minimize dependence and interdependence between elements whenever possible</li>
-     
+              <li>Never stops learning, observing, or experimenting</li>
+              <li>
+                Developing expertise and refining design abilities by reflecting and engaging with it.</li>
             </ul>
           </div>
         </div>
