--- a/about/index.html
+++ b/about/index.html
@@ -79,6 +79,13 @@
   <!--font     font-family: 'Roboto', sans-serif; -->
   <link href="https://fonts.googleapis.com/css2?family=Train+One&display=swap" rel="stylesheet">
   <!--font using hello-->
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Hi+Melody&family=Maven+Pro:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
+  <!--font Hi Melody-->
+
+
   <link
     href="https://fonts.googleapis.com/css2?family=Catamaran:wght@100;200;300;400;500;600;700;800;900&display=swap"
     rel="stylesheet">
@@ -266,7 +273,7 @@
       <div class="Grid-cell">
         <div class="element">
           <div class="elementInner cardBorder ">
-            <img class="IconS" src="IconDocument.svg" alt="se-arrow">
+            <img class="IconS" src="iconBrush.svg" alt="se-arrow">
 
             <div class="blankHXS"></div>
 
