--- a/index.html
+++ b/index.html
@@ -47,41 +47,53 @@
   <link rel="stylesheet" href="./main.css">
   <script type="text/javascript" src="scripts.js"></script>
 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
-
-  <link
-    href="https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap"
-    rel="stylesheet">
-  <!--font     font-family: 'Titillium Web', sans-serif; -->
-  <link
-    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
-    rel="stylesheet">
-  <!--font     font-family: 'Roboto', sans-serif; -->
-  <link href="https://fonts.googleapis.com/css2?family=Train+One&display=swap" rel="stylesheet">
-  <!--font using hello-->
-  <link
-    href="https://fonts.googleapis.com/css2?family=Catamaran:wght@100;200;300;400;500;600;700;800;900&display=swap"
-    rel="stylesheet">
-  <!--font     font-family: 'Catamaran', sans-serif; -->
   <link
     href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
     rel="stylesheet">
-  <!--font font-family: 'Lato', sans-serif; -->
+  <!--sitewide font-family: 'Lato', sans-serif; -->
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+    rel="stylesheet">
+  <!--sitewide - alt - font-family: 'Roboto', sans-serif; -->
+  <link href="https://fonts.googleapis.com/css2?family=Train+One&display=swap" rel="stylesheet">
+  <!--special font-family: 'Train One'; -->
+  <link
+    href="https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap"
+    rel="stylesheet">
+  <!--special font-family: 'Titillium Web', sans-serif; -->
+  <link
+    href="https://fonts.googleapis.com/css2?family=Catamaran:wght@100;200;300;400;500;600;700;800;900&display=swap"
+    rel="stylesheet">
+  <!--special font-family: 'Catamaran', sans-serif; -->
+  <link
+    href="https://fonts.googleapis.com/css2?family=Hi+Melody&family=Maven+Pro:wght@400;500;600;700;800;900&display=swap"
+    rel="stylesheet">
+  <!-- handwriting - Hi Melody-->
+  <link
+    href="https://fonts.googleapis.com/css2?family=Hi+Melody&family=Maven+Pro:wght@400;500;600;700;800;900&family=Shadows+Into+Light&display=swap"
+    rel="stylesheet">
+  <!-- handwriting - shadows into light-->
+  <link
+    href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;500;600;700;800;900&display=swap"
+    rel="stylesheet">
+  <!-- handwriting - font-family: Maven Pro; -->
+  <link href="https://fonts.googleapis.com/css2?family=La+Belle+Aurore&display=swap"
+    rel="stylesheet">
+  <!--handwriting - font-family: La Belle Aurore; -->
 
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Hi+Melody&family=Maven+Pro:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
-  <!--font Hi Melody-->
+  <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;500;600;700&display=swap"
+    rel="stylesheet">
+  <!--handwriting - font-family: 'Caveat'; -->
+  <link href="https://fonts.googleapis.com/css2?family=Caveat+Brush&display=swap" rel="stylesheet">
+  <!--handwriting - font-family: 'Caveat Brush', cursive; -->
+
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
     rel="stylesheet">
   <!--font awesome -->
 
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;500;600;700;800;900&display=swap"
-    rel="stylesheet">
-  <!--font font-family: Maven Pro; -->
 
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"
@@ -153,14 +165,10 @@
 
   <!--intro-->
   <div class="wrapper element">
-
-    <div class="blankHXS"></div>
-    <div class="t-hello">Hello, I'm Vicky. </div>
+    <div class="t-hello">hello, I'm Vicky. </div>
 
     <div class="intro" data-aos="fade-up">
       <div class="column">
-
-        <div class="blankHXS"></div>
         <div class="Grid Grid--gutters">
           <div class="Grid-cell">
             <strong>
@@ -236,7 +244,8 @@
                 <div class="element">
                   <h5>For job interview scheduling</h5>
                   <h3 class="arrCard colorBlack">APPOINTA</h3>
-                  <h4>Streamline the job interview scheduling process to make it more efficient, convenient, and intuitive</h4>
+                  <h4>Streamline the job interview scheduling process to make it more efficient,
+                    convenient, and intuitive</h4>
                 </div>
               </div>
             </div>
@@ -254,7 +263,8 @@
                   <h5>For grow business</h5>
                   <h3 class="arrCard colorBlack">SEER</h3>
                   <!--Analysis Report-->
-                  <h4>Help the brand managers understand their potential users and promote their brand on Reddit</h4>
+                  <h4>Help the brand managers understand their potential users and promote their
+                    brand on Reddit</h4>
                 </div>
               </div>
             </div>
@@ -293,7 +303,8 @@
                   <h5>For plant lovers</h5>
                   <h3 class="arrCard colorBlack">Gardeners hub</h3>
                   <h5>Find solutions and ideas to help gardeners to
-                    improve their horticultural experience with neighbors and reduce wasting resources
+                    improve their horticultural experience with neighbors and reduce wasting
+                    resources
                     by selling or sharing locally.</h5>
                 </div>
               </div>
