--- a/photography/index.html
+++ b/photography/index.html
@@ -49,29 +49,50 @@
   <script type="text/javascript" src="scripts_ScrollTrigger.js"></script>
 
   <link
-    href="https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap"
-    rel="stylesheet">
-  <!--font     font-family: 'Titillium Web', sans-serif; -->
+  href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
+  rel="stylesheet">
+<!--sitewide font-family: 'Lato', sans-serif; -->
+<link
+  href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+  rel="stylesheet">
+<!--sitewide - alt - font-family: 'Roboto', sans-serif; -->
+<link href="https://fonts.googleapis.com/css2?family=Train+One&display=swap" rel="stylesheet">
+<!--special font-family: 'Train One'; -->
+<link
+  href="https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap"
+  rel="stylesheet">
+<!--special font-family: 'Titillium Web', sans-serif; -->
+<link
+  href="https://fonts.googleapis.com/css2?family=Catamaran:wght@100;200;300;400;500;600;700;800;900&display=swap"
+  rel="stylesheet">
+<!--special font-family: 'Catamaran', sans-serif; -->
+<link
+  href="https://fonts.googleapis.com/css2?family=Hi+Melody&family=Maven+Pro:wght@400;500;600;700;800;900&display=swap"
+  rel="stylesheet">
+<!-- handwriting - Hi Melody-->
+<link
+  href="https://fonts.googleapis.com/css2?family=Hi+Melody&family=Maven+Pro:wght@400;500;600;700;800;900&family=Shadows+Into+Light&display=swap"
+  rel="stylesheet">
+<!-- handwriting - shadows into light-->
+<link
+  href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;500;600;700;800;900&display=swap"
+  rel="stylesheet">
+<!-- handwriting - font-family: Maven Pro; -->
+<link href="https://fonts.googleapis.com/css2?family=La+Belle+Aurore&display=swap"
+  rel="stylesheet">
+<!--handwriting - font-family: La Belle Aurore; -->
 
-  <link
-    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
-    rel="stylesheet">
-  <!--font     font-family: 'Roboto', sans-serif; -->
+<link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;500;600;700&display=swap"
+  rel="stylesheet">
+<!--handwriting - font-family: 'Caveat'; -->
+<link href="https://fonts.googleapis.com/css2?family=Caveat+Brush&display=swap" rel="stylesheet">
+<!--handwriting - font-family: 'Caveat Brush', cursive; -->
 
-  <link href="https://fonts.googleapis.com/css2?family=Train+One&display=swap" rel="stylesheet">
-  <!--font using hello-->
-  <link
-    href="https://fonts.googleapis.com/css2?family=Catamaran:wght@100;200;300;400;500;600;700;800;900&display=swap"
-    rel="stylesheet">
-  <!--font     font-family: 'Catamaran', sans-serif; -->
-  <link
-    href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
-    rel="stylesheet">
-  <!--font font-family: 'Lato', sans-serif; -->
+<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+  rel="stylesheet">
+<!--font awesome -->
 
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
-    rel="stylesheet">
-  <!--font awesome -->
+
 
 
 
@@ -145,10 +166,8 @@
   <!--intro-->
   <div class="wrapper element">
     <div class="intro">
-      <div class="t-hello">Hi there! </div>
+      <div class="t-hello">hi there! </div>
     </div>
-    <div class="blankHXS"></div>
-
     <div class="intro" data-aos="fade-up">
       <strong>
         <div class="intro">
