--- a/architecture/index.html
+++ b/architecture/index.html
@@ -43,33 +43,49 @@
 
   <link rel="stylesheet" href="../main.css">
   <script type="text/javascript" src="../scripts.js"></script>
-
-
-  <link
-    href="https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap"
-    rel="stylesheet">
-  <!--font     font-family: 'Titillium Web', sans-serif; -->
-
-  <link
-    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
-    rel="stylesheet">
-  <!--font     font-family: 'Roboto', sans-serif; -->
-
-  <link href="https://fonts.googleapis.com/css2?family=Train+One&display=swap" rel="stylesheet">
-  <!--font using hello-->
-  <link
-    href="https://fonts.googleapis.com/css2?family=Catamaran:wght@100;200;300;400;500;600;700;800;900&display=swap"
-    rel="stylesheet">
-  <!--font     font-family: 'Catamaran', sans-serif; -->
   <link
     href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
     rel="stylesheet">
-  <!--font font-family: 'Lato', sans-serif; -->
+  <!--sitewide font-family: 'Lato', sans-serif; -->
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+    rel="stylesheet">
+  <!--sitewide - alt - font-family: 'Roboto', sans-serif; -->
+  <link href="https://fonts.googleapis.com/css2?family=Train+One&display=swap" rel="stylesheet">
+  <!--special font-family: 'Train One'; -->
+  <link
+    href="https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap"
+    rel="stylesheet">
+  <!--special font-family: 'Titillium Web', sans-serif; -->
+  <link
+    href="https://fonts.googleapis.com/css2?family=Catamaran:wght@100;200;300;400;500;600;700;800;900&display=swap"
+    rel="stylesheet">
+  <!--special font-family: 'Catamaran', sans-serif; -->
+  <link
+    href="https://fonts.googleapis.com/css2?family=Hi+Melody&family=Maven+Pro:wght@400;500;600;700;800;900&display=swap"
+    rel="stylesheet">
+  <!-- handwriting - Hi Melody-->
+  <link
+    href="https://fonts.googleapis.com/css2?family=Hi+Melody&family=Maven+Pro:wght@400;500;600;700;800;900&family=Shadows+Into+Light&display=swap"
+    rel="stylesheet">
+  <!-- handwriting - shadows into light-->
+  <link
+    href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;500;600;700;800;900&display=swap"
+    rel="stylesheet">
+  <!-- handwriting - font-family: Maven Pro; -->
+  <link href="https://fonts.googleapis.com/css2?family=La+Belle+Aurore&display=swap"
+    rel="stylesheet">
+  <!--handwriting - font-family: La Belle Aurore; -->
+
+  <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;500;600;700&display=swap"
+    rel="stylesheet">
+  <!--handwriting - font-family: 'Caveat'; -->
+  <link href="https://fonts.googleapis.com/css2?family=Caveat+Brush&display=swap" rel="stylesheet">
+  <!--handwriting - font-family: 'Caveat Brush', cursive; -->
 
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
     rel="stylesheet">
   <!--font awesome -->
-
 
 
 
@@ -85,12 +101,12 @@
   <script type="text/javascript" src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <!--aos-->
- 
+
 
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-E8YXDWJST2"></script>
-     <!-- google analytics-->
+  <!-- google analytics-->
 
- <script>
+  <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
@@ -116,15 +132,16 @@
 
       <div class="navbar">
         <ul class="nav-menu">
-          <li class="nav-item inactive "><a href="/"
-              class="nav-link box font300-1080 ">PROJECT</a></li>
+          <li class="nav-item inactive "><a href="/" class="nav-link box font300-1080 ">PROJECT</a>
+          </li>
           <li class="nav-item active greenNav"><a href="/architecture"
               class="nav-link box">ARCHITECTURE</a>
           </li>
           <li class="nav-item inactive "><a href="/photography"
               class="nav-link box font300-1080 ">PHOTOGRAPHY</a>
           </li>
-          <li class="nav-item inactive "><a href="/about" class="nav-link box font300-1080 ">ABOUT</a>
+          <li class="nav-item inactive "><a href="/about"
+              class="nav-link box font300-1080 ">ABOUT</a>
           </li>
         </ul>
       </div>
@@ -140,32 +157,31 @@
   <div class="blankHM"></div>
   <!--intro-->
   <div class="wrapper element">
- 
-    <div class="intro">
-      <div class="t-hello">Hi there! </div>
-    </div>
-    <div class="blankHXS"></div>
 
+    <div class="intro">
+      <div class="t-hello">hi there! </div>
+    </div>
     <div class="intro" data-aos="fade-up">
       <strong>
         <div class="intro">
           <h1> Architecture &nbsp;</h1>
-        
+
           <span class="divider1"></span>
           <h1> Selected academic projects </h1>
         </div>
       </strong>
- 
+
     </div>
 
     <div class="Grid Grid--full">
       <div class="Grid-cell colorGrey">
         <h3>projects are from my three-year M.Arch program</h3>
         <h3>the main focuses were design theories, methods, and practices</h3>
-        <h3>projects emphasize the major format, spatial, material, tectonic, social, technological, and environmental determinants of building form</h3>
+        <h3>projects emphasize the major format, spatial, material, tectonic, social, technological,
+          and environmental determinants of building form</h3>
       </div>
     </div>
- 
+
 
   </div>
   <!--intro-->
